# WotStrategyClient

./: CMakeLists.txt  main.cpp
ServerAPI/: TcpConnection.cpp  TcpConnection.h  WotStrategyServer.cpp  WotStrategyServer.h
ServerAPI/Models/: LoginRequestModel.cpp  LoginRequestModel.h  LoginResponceModel.cpp  LoginResponseModel.h
